<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    tools:context=".Registration"
    android:background="@drawable/back">



    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:background="@drawable/panel"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="55dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/NewUser"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Uname"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Upass"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cupass"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/confirmPasswordText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/Register"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:textSize="16sp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/register_logo_icon"/>
</RelativeLayout>
